# forensic-frontend

./: .env.example  .gitattributes  .gitignore  AUTOPILOT.md  DESKTOP.md  README.md  env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.autopilot/: MEMORY.md
.github/workflows/: desktop-release.yml
scripts/: install-startup-windows.bat  install-startup-windows.ps1  prepare-sidecar.mjs  self-update.bat  start-windows.bat  uninstall-startup-windows.bat  uninstall-startup-windows.ps1  update-all.bat
src/: App.tsx  apollo.ts  main.tsx  nav.ts  tauri-globals.d.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.tsx  CaseGate.tsx  CaseScopeBar.tsx  NetworkGraph.tsx  PersonFormModal.tsx  Plot.tsx  inputs.tsx  kit.tsx
src/graphql/: auth.ts  queries.ts  suspects.ts
src/lib/: auth.tsx  device.ts  download.ts  drilldown.ts  format.ts  ignoredPairs.ts  networkGraph.ts
src/pages/: AdminPage.tsx  AnalysisPage.tsx  AuditLogPage.tsx  CallRecordsPage.tsx  CasesPage.tsx  DashboardPage.tsx  FraudWorkflowPage.tsx  ImportPage.tsx  IntelBoardPage.tsx  LinkChartPage.tsx  LoginPage.tsx  MapPage.tsx  OsintPage.tsx  PeoplePage.tsx  ReportsPage.tsx  SettingsPage.tsx  SuspectsPage.tsx  TimelinePage.tsx  TransactionsPage.tsx
src/styles/: app.css
