[package]
name = "forensic-analyst-desktop"
version = "3.2.0"
description = "Forensic Analyst Workstation"
authors = ["jeefo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "forensic_analyst_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
